# streamlit-practice

./: README.md  pyproject.toml
src/: app.py
