[tool.poetry]
name = "streamlit-practice"
version = "0.1.0"
description = ""
authors = ["Khushi Rani <ranikhushi2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
pandas = "^2.2.2"
numpy = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
